# gnome-tasks

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  TODO.md  autogen.sh  configure.ac  tasks-1.0.pc.in  tasks.doap
data/: Makefile.am  apps.tasks.gschema.xml.in.in  tasks.appdata.xml.in  tasks.desktop.in.in
data/icons/: Makefile.am
data/icons/hicolor/: Makefile.am
m4/: tasks.m4
po/: ChangeLog
src/: Makefile.am  config.vapi  main.vala  tasks-application.vala  tasks-plugin-manager.vala  tasks-settings.vala  tasks-task-row.vala  tasks-window.vala  tasks.gresource.xml
src/backend/: tasks-application.vala  tasks-base-object.vala  tasks-data-source.vala  tasks-list.vala  tasks-manager.vala  tasks-settings.vala  tasks-tag.vala  tasks-task.vala
src/components/: tasks-create-list-dialog.vala  tasks-list-row.vala  tasks-lists-dialog.vala  tasks-new-task-dialog.vala  tasks-preferences-dialog.vala  tasks-tags-dialog.vala  tasks-task-row.vala  tasks-task-view.vala  tasks-text-editor.vala  tasks-window.vala
src/resources/: create-list.ui  editor.ui  list-row.ui  list_row.ui  list_row.ui~  lists-dialog.ui  menus.ui  new-task-dialog.ui  preferences.ui  style.css  task-row.ui  task-view.ui  task_row.ui  window.glade~  window.ui  window.ui~
src/resources/sql/: schema.sql
src/sources/: tasks-local-source.vala
src/util/: tasks-datetime.vala  tasks-functions.vala
src/widgets/: tasks-task-view.vala
